--- a/Ejercicio_02/index.html
+++ b/Ejercicio_02/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 02 - Display</title>
-    <!--  <script src="https://res.cloudinary.com/pmichventura/raw/upload/v1645150279/source/display.js" type="module"></script> -->
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <!-- comenzamos aquí👇🏼 -->
-    
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ejercicio 02 - Display</title>
+  <!--  <script src="https://res.cloudinary.com/pmichventura/raw/upload/v1645150279/source/display.js" type="module"></script> -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <!-- comenzamos aquí👇🏼 -->
+  <nav class="navegacion">
+    <ul>
+      <li>link 1</li>
+      <li>link 2</li>
+      <li>link 3</li>
+      <li>link 4</li>
+    </ul>
+  </nav>
+  <div class="contenedor-banner">
+
+  </div>
+<h2> HELLO </h2>
+<p>holi</p>
+<div class="contenedor">
+<div class="contenedor-fila">
+<img width="200px" src="annie-spratt-3uWgJ_o8cjA-unsplash.jpg" alt="imagen">
+<img width="200px" src="annie-spratt-3uWgJ_o8cjA-unsplash.jpg" alt="imagen">
+<img width="200px" src="annie-spratt-3uWgJ_o8cjA-unsplash.jpg" alt="imagen">
+<img width="200px" src="annie-spratt-3uWgJ_o8cjA-unsplash.jpg" alt="imagen">
+</div>
+</body>
+
 </html>
