--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ejercicio 04</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,8 +21,19 @@
       <h2>stay king</h2>
       <p>ukraine</p>
       <p>#staywithukraine</p>
+      </div>
 
-    </div>
+    <figure>
+      <div>
+        <img clas="img"
+        src="ucrania.jpeg" 
+        alt="imagen">
+      </div>
+    </figure>
+
+
+</div>
+
   </div>
 </body>
 
